# FF-SSD

./: README.md
femu/femu-scripts/: run-blackbox.sh
femu/hw/block/femu/: nvme-admin.c  nvme.h
femu/hw/block/femu/bbssd/: ftl.c
simplessd-standalone/: 256GB_DisplayAdsDataServer.ambertrace  run.sh  simplessd-standalone.cbp  ~.bashrc
simplessd-standalone/FF/: FF_BuildServer.py  FF_BuildServer2.py  runpy_FF_BuildServer.sh  runpy_FF_BuildServer2.sh
simplessd-standalone/config/: 1.cfg  2.cfg  3.cfg  4.cfg  5.cfg  6.cfg  7.cfg  8.cfg  9.cfg  sample.cfg
simplessd-standalone/igl/request/: request_generator.cc
simplessd-standalone/igl/trace/: trace_config.cc  trace_config.hh  trace_replayer.cc  trace_replayer.hh
simplessd-standalone/sim/: main.cc
simplessd-standalone/simplessd/: simplessd.cbp
simplessd-standalone/simplessd/config/: sample.cfg
simplessd-standalone/simplessd/ftl/: page_mapping.cc  page_mapping.hh
simplessd-standalone/simplessd/ftl/common/: block.hh
simplessd-standalone/simplessd/icl/: icl.cc
simplessd-standalone/simplessd/lib/mcpat/: .gitignore  CMakeLists.txt  XML_Parse.cc  XML_Parse.h  arch_const.h  array.cc  array.h  basic_components.cc  basic_components.h  core.cc  core.h  interconnect.cc  interconnect.h  iocontrollers.cc  iocontrollers.h  logic.cc  logic.h  mcpat.cbp  mcpat.cc  mcpat.h  memoryctrl.cc  memoryctrl.h  noc.cc  noc.h  processor.cc  processor.h  sharedcache.cc  sharedcache.h
simplessd-standalone/simplessd/lib/mcpat/cacti/: Ucache.cc  Ucache.h  arbiter.cc  arbiter.h  area.h  bank.cc  bank.h  basic_circuit.cc  basic_circuit.h  cacti_interface.cc  cacti_interface.h  component.cc  component.h  const.h  crossbar.cc  crossbar.h  decoder.cc  decoder.h  htree2.cc  htree2.h  io.cc  io.h  main.cc  mat.cc  mat.h  nuca.cc  nuca.h  parameter.cc  parameter.h  powergating.cc  powergating.h  router.cc  router.h  subarray.cc  subarray.h  technology.cc  uca.cc  uca.h  version_cacti.h  wire.cc  (+1 more)
simplessd-standalone/simplessd/pal/: abstract_pal.hh  pal.cc  pal.hh  pal_old.cc  pal_old.hh
